fix(harness): harden ask_user HITL flow